# polars_rabobank_blog

./: .flake8  README.md  pyproject.toml  test.py
blog/: Polars-blogpost.md
src/: solution_pandas.py  solution_polars.py
src/utils/: generate_transactions.py
tests/: test_compare_performance.py  test_detect_monthly_periodicity.py  test_generate_transactions.py  test_split_based_on_amount.py
