[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.poetry]
name = "polar-rabobank-blog"
version = "0.0.1"
description = "Examples supporting my blog post on how Rabobank is using Polars"
authors = ["Freerk Venhuizen"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
polars = {version = "1.33.1", extras=["pyarrow"]} 
pandas = "^2.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-benchmark = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black  = "^24.4.0"
flake8 = "^6"
isort = "^5"
mypy = "^1"

[tool.bandit]
exclude_dirs = ["venv","tests", ".venv"]
tests = ["B201", "B301"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

